original/tests%20231224161151/compiler_output/CompilerOutput-AntiShuffle_17_1Test.java.txt
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/AntiShuffle_17_1Test.java:15: error: sortString(String) has private access in AntiShuffle
        String actualOutput = AntiShuffle.sortString(input);
                                         ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/AntiShuffle_17_1Test.java:25: error: sortString(String) has private access in AntiShuffle
        String actualOutput = AntiShuffle.sortString(input);
                                         ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/AntiShuffle_17_1Test.java:35: error: sortString(String) has private access in AntiShuffle
        String actualOutput = AntiShuffle.sortString(input);
                                         ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231224161151/test_cases/AntiShuffle_17_1Test.java:45: error: sortString(String) has private access in AntiShuffle
        String actualOutput = AntiShuffle.sortString(input);
                                         ^
4 errors
